--- a/project.ipynb
+++ b/project.ipynb
@@ -2,37 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'newStr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-360da1a1ba16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0mfinalImagesArr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mfinalAnswersArr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0mimageToArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/23amrutad/Desktop/cup-original'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-1-360da1a1ba16>\u001b[0m in \u001b[0;36mimageToArray\u001b[0;34m(directoryName)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlistOfImages\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0mnameOfImage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdirectory\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewStr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m         \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mReadResizeConvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewStr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'newStr' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# import statements\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
     "import cv2\n",
     "import os \n",
     "from skimage.color import rgb2gray\n",
-    "\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#functions\n",
     "\n",
     "# this function reads and image with the directory file_path, resizes the image, and converts it to grayscale\n",
     "# @param file_path is the directory of the image\n",
     "def ReadResizeConvert(file_path):\n",
     "    \"\"\"reads image, resizes, converts to grayscale\"\"\"\n",
     "    img = cv2.imread(file_path)\n",
-    "    print (type(img))\n",
     "    assert type(img) != type(None)\n",
     "    newImg = cv2.resize(img, (28, 28))\n",
     "    assert newImg.shape == (28, 28, 3)\n",
@@ -44,82 +42,48 @@
     "# It then uses the function ReadResizeConvert to change the images \n",
     "# then it appends the images to an array already created outside the function.\n",
     "# @param directoryName is a string that is part of the directory\n",
-    "def imageToArray(directoryName):\n",
+    "def imageToArray(directoryName, localFinalImagesArr, localFinalAnswersArr, answer):\n",
     "    listOfImages = os.listdir(directoryName)\n",
     "    directory = directoryName + '/'\n",
     "    for i in listOfImages:\n",
     "        nameOfImage = directory + i\n",
-    "        assert type(newStr) == type('')\n",
-    "        output = ReadResizeConvert(newStr)\n",
-    "        data.append(output)\n",
-    "    for i in data:\n",
-    "        finalImagesArr.append(i)\n",
-    "        finalAnswersArr.append(0)\n",
-    "        \n",
-    "\n",
-    "#finalImagesArr is the array in which we put the images from the array data1 that we keep adding to\n",
-    "#finalAnswersArr contains the corresponding labels for the images in myData\n",
-    "\n",
-    "data = []\n",
-    "finalImagesArr = []\n",
-    "finalAnswersArr = []\n",
-    "imageToArray('/Users/23amrutad/Desktop/cup-original')\n",
-    "\n",
-    "\n",
-    "\n",
-    "data = []\n",
-    "imageToArray('/Users/23amrutad/Desktop/coke-original')\n",
-    "\n",
-    "\n",
-    "\n",
-    "x_train = np.array(finalImagesArr)\n",
-    "y_train = np.array(finalAnswersArr)\n",
-    "\n",
-    "print ('shape of x is ', x_train.shape)\n",
-    "print ('shape of y is ', y_train.shape)\n",
-    "\n",
-    "\n",
-    "\n",
-    "data = []\n",
-    "finalImagesArr = []\n",
-    "finalAnswersArr = []\n",
-    "imageToArray('/Users/23amrutad/Desktop/cup_test')\n",
-    "    \n",
-    "data = []\n",
-    "imageToArray('/Users/23amrutad/Desktop/cup-sunny')\n",
-    "\n",
-    "\n",
-    "\n",
-    "data = []\n",
-    "imageToArray('/Users/23amrutad/Desktop/coke_test')\n",
-    "\n",
-    "data = []\n",
-    "imageToArray('/Users/23amrutad/Desktop/coke-sunny')\n",
-    "\n",
-    "\n",
-    "for i in data:\n",
-    "    finalImagesArr.append(i)\n",
-    "for i in data:\n",
-    "    finalAnswersArr.append(1)\n",
-    "\n",
-    "x_test = np.array(finalImagesArr)\n",
-    "y_test = np.array(finalAnswersArr)\n",
-    "\n",
-    "print ('shape of x is ', x_test.shape)\n",
-    "print ('shape of y is ', y_test.shape)\n"
+    "        assert type(nameOfImage) == type('')\n",
+    "        output = ReadResizeConvert(nameOfImage)\n",
+    "        localFinalImagesArr.append(output)\n",
+    "        localFinalAnswersArr.append(answer)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "(x_train , y_train), (x_test, y_test) = (x_train, y_train), (x_test, y_test)\n",
-    "\n"
+    "#finalImagesArr is the array in which we put the images from the array data1 that we keep adding to\n",
+    "#finalAnswersArr contains the corresponding labels for the images in myData\n",
+    "\n",
+    "finalImagesArrTrain = []\n",
+    "finalAnswersArrTrain = []\n",
+    "\n",
+    "imageToArray('/Users/23amrutad/Desktop/cup-original', finalImagesArrTrain, finalAnswersArrTrain, 0)\n",
+    "imageToArray('/Users/23amrutad/Desktop/coke-original', finalImagesArrTrain, finalAnswersArrTrain, 1)\n",
+    "\n",
+    "x_test = np.array(finalImagesArrTrain)\n",
+    "y_test = np.array(finalAnswersArrTrain)\n",
+    "\n",
+    "\n",
+    "finalImagesArrTest = []\n",
+    "finalAnswersArrTest = []\n",
+    "\n",
+    "imageToArray('/Users/23amrutad/Desktop/cup_test', finalImagesArrTest, finalAnswersArrTest, 0)\n",
+    "imageToArray('/Users/23amrutad/Desktop/cup-sunny', finalImagesArrTest, finalAnswersArrTest, 0)\n",
+    "imageToArray('/Users/23amrutad/Desktop/coke_test', finalImagesArrTest, finalAnswersArrTest, 1)\n",
+    "imageToArray('/Users/23amrutad/Desktop/coke-sunny', finalImagesArrTest, finalAnswersArrTest, 1)\n",
+    "\n",
+    "x_train = np.array(finalImagesArrTest)\n",
+    "y_train = np.array(finalAnswersArrTest)\n"
    ]
   },
   {
@@ -179,16 +143,14 @@
     "model.add(Conv2D(28, kernel_size=(3,3), input_shape=input_shape))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(128, activation=tf.nn.relu))\n",
-    "model.add(Dropout(0.2))\n",
+    "model.add(Dense(16, activation=tf.nn.relu))\n",
+    "model.add(Dropout(0.5))\n",
     "model.add(Dense(2, activation=tf.nn.softmax))\n",
     " \n",
     " \n",
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
     "model.fit(x=x_train,y=y_train, epochs=10)\n",
-    "model.evaluate(x_test, y_test)\n",
-    " \n",
-    "\n"
+    "model.evaluate(x_test, y_test)"
    ]
   },
   {
