shuffled the training data, added model.predict

--- a/project.ipynb
+++ b/project.ipynb
@@ -83,7 +83,34 @@
     "imageToArray('/Users/23amrutad/Desktop/coke-sunny', finalImagesArrTest, finalAnswersArrTest, 1)\n",
     "\n",
     "x_train = np.array(finalImagesArrTest)\n",
-    "y_train = np.array(finalAnswersArrTest)\n"
+    "y_train = np.array(finalAnswersArrTest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this code makes a list of arrays with entries for x_train and the corresponding y_train\n",
+    "#it changes the list to an np array, shuffles the array, \n",
+    "#and puts the x_train and y_train, now shuffled, back in their respective training arrays\n",
+    "#we have to shuffle them together because if we shuffle them separately, it goes out of sync\n",
+    "\n",
+    "xy_list = [];\n",
+    "count = 0;\n",
+    "for _ in x_train:\n",
+    "    myArr = [x_train[count], y_train[count]]\n",
+    "    xy_list.append(myArr)\n",
+    "    count+=1;\n",
+    "xy_nparr = np.array(xy_list)\n",
+    "np.random.shuffle(xy_nparr)\n",
+    "print (xy_nparr.shape)\n",
+    "count = 0;\n",
+    "for _ in xy_nparr:\n",
+    "    x_train[count] = xy_nparr[count][0]\n",
+    "    y_train[count] = xy_nparr[count][1]\n",
+    "    count += 1;"
    ]
   },
   {
@@ -149,8 +176,17 @@
     " \n",
     " \n",
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
-    "model.fit(x=x_train,y=y_train, epochs=10)\n",
+    "model.fit(x=x_train,y=y_train, epochs=50)\n",
     "model.evaluate(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.predict(x_test)"
    ]
   },
   {
