no more images, videos that will be chopped/resized/made over by cv2, changed the functions

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,8 @@
     "\n",
     "# this function reads and image with the directory file_path, resizes the image, and converts it to grayscale\n",
     "# @param file_path is the directory of the image\n",
-    "def ReadResizeConvert(file_path):\n",
-    "    \"\"\"reads image, resizes, converts to grayscale\"\"\"\n",
-    "    img = cv2.imread(file_path)\n",
+    "def ResizeConvert(img):\n",
+    "    \"\"\"resizes image, converts to grayscale\"\"\"\n",
     "    assert type(img) != type(None)\n",
     "    newImg = cv2.resize(img, (28, 28))\n",
     "    assert newImg.shape == (28, 28, 3)\n",
@@ -42,24 +41,54 @@
     "# It then uses the function ReadResizeConvert to change the images \n",
     "# then it appends the images to an array already created outside the function.\n",
     "# @param directoryName is a string that is part of the directory\n",
-    "def imageToArray(directoryName, localFinalImagesArr, localFinalAnswersArr, answer):\n",
-    "    listOfImages = os.listdir(directoryName)\n",
-    "    directory = directoryName + '/'\n",
-    "    for i in listOfImages:\n",
-    "        nameOfImage = directory + i\n",
-    "        assert type(nameOfImage) == type('')\n",
-    "        output = ReadResizeConvert(nameOfImage)\n",
+    "#def imageToArray(directoryName, localFinalImagesArr, localFinalAnswersArr, answer):\n",
+    "#    listOfImages = os.listdir(directoryName)\n",
+    "#    directory = directoryName + '/'\n",
+    "#    for i in listOfImages:\n",
+    "#        pathOfImage = directory + i\n",
+    "#        img = cv2.imread(pathOfImage)\n",
+    "#        output = ResizeConvert(img)\n",
+    "#        localFinalImagesArr.append(output)\n",
+    "#        localFinalAnswersArr.append(answer)\n",
+    "        \n",
+    "def videoToArray(videoName, localFinalImagesArr, localFinalAnswersArr, answer):\n",
+    "    cam = cv2.VideoCapture(videoName)\n",
+    "    while True:\n",
+    "        ret, frame = cam.read()\n",
+    "        if frame is None:\n",
+    "            break\n",
+    "        output = ResizeConvert(frame)\n",
     "        localFinalImagesArr.append(output)\n",
-    "        localFinalAnswersArr.append(answer)"
+    "        localFinalAnswersArr.append(answer)\n",
+    "    print ('videoToArray is returning ', len(localFinalImagesArr), ' samples')\n",
+    "        \n",
+    "        \n",
+    "# takes raw image arrays after conversion and modifies it so that the model can use it        \n",
+    "def prepareData(data):\n",
+    "    data = data.reshape(data.shape[0], 28, 28, 1)\n",
+    "    data = data.astype('float32')\n",
+    "    data /= 255\n",
+    "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "videoToArray is returning  304  samples\n",
+      "videoToArray is returning  684  samples\n",
+      "videoToArray is returning  314  samples\n",
+      "videoToArray is returning  667  samples\n"
+     ]
+    }
+   ],
    "source": [
     "#finalImagesArr is the array in which we put the images from the array data1 that we keep adding to\n",
     "#finalAnswersArr contains the corresponding labels for the images in myData\n",
@@ -67,30 +96,44 @@
     "finalImagesArrTrain = []\n",
     "finalAnswersArrTrain = []\n",
     "\n",
-    "imageToArray('/Users/23amrutad/Desktop/cup-original', finalImagesArrTrain, finalAnswersArrTrain, 0)\n",
-    "imageToArray('/Users/23amrutad/Desktop/coke-original', finalImagesArrTrain, finalAnswersArrTrain, 1)\n",
+    "#imageToArray('/Users/23amrutad/Desktop/cup-original', finalImagesArrTrain, finalAnswersArrTrain, 0)\n",
+    "#imageToArray('/Users/23amrutad/Desktop/coke-original', finalImagesArrTrain, finalAnswersArrTrain, 1)\n",
     "\n",
-    "x_test = np.array(finalImagesArrTrain)\n",
-    "y_test = np.array(finalAnswersArrTrain)\n",
     "\n",
+    "videoToArray('/Users/23amrutad/Desktop/training_videos/cup.MOV', finalImagesArrTrain, finalAnswersArrTrain, 0)\n",
+    "videoToArray('/Users/23amrutad/Desktop/training_videos/coke.MOV', finalImagesArrTrain, finalAnswersArrTrain, 1)\n",
+    "\n",
+    "x_train = np.array(finalImagesArrTrain)\n",
+    "y_train = np.array(finalAnswersArrTrain)\n",
     "\n",
     "finalImagesArrTest = []\n",
     "finalAnswersArrTest = []\n",
     "\n",
-    "imageToArray('/Users/23amrutad/Desktop/cup_test', finalImagesArrTest, finalAnswersArrTest, 0)\n",
-    "imageToArray('/Users/23amrutad/Desktop/cup-sunny', finalImagesArrTest, finalAnswersArrTest, 0)\n",
-    "imageToArray('/Users/23amrutad/Desktop/coke_test', finalImagesArrTest, finalAnswersArrTest, 1)\n",
-    "imageToArray('/Users/23amrutad/Desktop/coke-sunny', finalImagesArrTest, finalAnswersArrTest, 1)\n",
+    "#imageToArray('/Users/23amrutad/Desktop/cup_test', finalImagesArrTest, finalAnswersArrTest, 0)\n",
+    "#imageToArray('/Users/23amrutad/Desktop/cup-sunny', finalImagesArrTest, finalAnswersArrTest, 0)\n",
+    "#imageToArray('/Users/23amrutad/Desktop/coke_test', finalImagesArrTest, finalAnswersArrTest, 1)\n",
+    "#imageToArray('/Users/23amrutad/Desktop/coke-sunny', finalImagesArrTest, finalAnswersArrTest, 1)\n",
     "\n",
-    "x_train = np.array(finalImagesArrTest)\n",
-    "y_train = np.array(finalAnswersArrTest)"
+    "videoToArray('/Users/23amrutad/Desktop/training_videos/cup_test.MOV', finalImagesArrTest, finalAnswersArrTest, 0)\n",
+    "videoToArray('/Users/23amrutad/Desktop/training_videos/coke_test.MOV', finalImagesArrTest, finalAnswersArrTest, 1)\n",
+    "\n",
+    "x_test = np.array(finalImagesArrTest)\n",
+    "y_test = np.array(finalAnswersArrTest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(684, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "#this code makes a list of arrays with entries for x_train and the corresponding y_train\n",
     "#it changes the list to an np array, shuffles the array, \n",
@@ -115,51 +158,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(684, 28, 28, 1)\n",
+      "(667, 28, 28, 1)\n",
+      "Epoch 1/50\n",
+      "684/684 [==============================] - 1s 761us/step - loss: 0.6758 - accuracy: 0.5760\n",
+      "Epoch 2/50\n",
+      "684/684 [==============================] - 0s 336us/step - loss: 0.6397 - accuracy: 0.6901\n",
+      "Epoch 3/50\n",
+      "684/684 [==============================] - 0s 329us/step - loss: 0.6139 - accuracy: 0.6915\n",
+      "Epoch 4/50\n",
+      "684/684 [==============================] - 0s 307us/step - loss: 0.6077 - accuracy: 0.6871\n",
+      "Epoch 5/50\n",
+      "684/684 [==============================] - 0s 303us/step - loss: 0.6047 - accuracy: 0.6974\n",
+      "Epoch 6/50\n",
+      "684/684 [==============================] - 0s 307us/step - loss: 0.6045 - accuracy: 0.7120\n",
+      "Epoch 7/50\n",
+      "684/684 [==============================] - 0s 292us/step - loss: 0.6020 - accuracy: 0.6857\n",
+      "Epoch 8/50\n",
+      "684/684 [==============================] - 0s 326us/step - loss: 0.5953 - accuracy: 0.6959\n",
+      "Epoch 9/50\n",
+      "684/684 [==============================] - 0s 528us/step - loss: 0.5944 - accuracy: 0.6974\n",
+      "Epoch 10/50\n",
+      "684/684 [==============================] - 0s 544us/step - loss: 0.5989 - accuracy: 0.6974\n",
+      "Epoch 11/50\n",
+      "684/684 [==============================] - 0s 328us/step - loss: 0.5981 - accuracy: 0.6959\n",
+      "Epoch 12/50\n",
+      "684/684 [==============================] - 0s 302us/step - loss: 0.5887 - accuracy: 0.6959\n",
+      "Epoch 13/50\n",
+      "684/684 [==============================] - 0s 303us/step - loss: 0.5857 - accuracy: 0.6988\n",
+      "Epoch 14/50\n",
+      "684/684 [==============================] - 0s 305us/step - loss: 0.5828 - accuracy: 0.6988\n",
+      "Epoch 15/50\n",
+      "684/684 [==============================] - 0s 307us/step - loss: 0.5747 - accuracy: 0.7003\n",
+      "Epoch 16/50\n",
+      "684/684 [==============================] - 0s 306us/step - loss: 0.5811 - accuracy: 0.7018\n",
+      "Epoch 17/50\n",
+      "684/684 [==============================] - 0s 304us/step - loss: 0.5666 - accuracy: 0.7091\n",
+      "Epoch 18/50\n",
+      "684/684 [==============================] - 0s 407us/step - loss: 0.5717 - accuracy: 0.6944\n",
+      "Epoch 19/50\n",
+      "684/684 [==============================] - 0s 337us/step - loss: 0.5773 - accuracy: 0.7135\n",
+      "Epoch 20/50\n",
+      "684/684 [==============================] - 0s 333us/step - loss: 0.5600 - accuracy: 0.7091\n",
+      "Epoch 21/50\n",
+      "684/684 [==============================] - 0s 324us/step - loss: 0.5705 - accuracy: 0.7149\n",
+      "Epoch 22/50\n",
+      "684/684 [==============================] - 0s 320us/step - loss: 0.5682 - accuracy: 0.7091\n",
+      "Epoch 23/50\n",
+      "684/684 [==============================] - 0s 365us/step - loss: 0.5660 - accuracy: 0.7003\n",
+      "Epoch 24/50\n",
+      "684/684 [==============================] - 0s 528us/step - loss: 0.5548 - accuracy: 0.7135\n",
+      "Epoch 25/50\n",
+      "684/684 [==============================] - 0s 580us/step - loss: 0.5618 - accuracy: 0.7003\n",
+      "Epoch 26/50\n",
+      "684/684 [==============================] - 0s 314us/step - loss: 0.5592 - accuracy: 0.7047\n",
+      "Epoch 27/50\n",
+      "684/684 [==============================] - 0s 308us/step - loss: 0.5539 - accuracy: 0.7178\n",
+      "Epoch 28/50\n",
+      "684/684 [==============================] - 0s 312us/step - loss: 0.5538 - accuracy: 0.7310\n",
+      "Epoch 29/50\n",
+      "684/684 [==============================] - 0s 354us/step - loss: 0.5541 - accuracy: 0.7193\n",
+      "Epoch 30/50\n",
+      "684/684 [==============================] - 0s 333us/step - loss: 0.5454 - accuracy: 0.7222\n",
+      "Epoch 31/50\n",
+      "684/684 [==============================] - 0s 380us/step - loss: 0.5394 - accuracy: 0.7178\n",
+      "Epoch 32/50\n",
+      "684/684 [==============================] - 0s 314us/step - loss: 0.5606 - accuracy: 0.7193\n",
+      "Epoch 33/50\n",
+      "684/684 [==============================] - 0s 447us/step - loss: 0.5456 - accuracy: 0.7164\n",
+      "Epoch 34/50\n",
+      "684/684 [==============================] - 0s 413us/step - loss: 0.5395 - accuracy: 0.7032\n",
+      "Epoch 35/50\n",
+      "684/684 [==============================] - 0s 435us/step - loss: 0.5454 - accuracy: 0.7135\n",
+      "Epoch 36/50\n",
+      "684/684 [==============================] - 0s 366us/step - loss: 0.5373 - accuracy: 0.7164\n",
+      "Epoch 37/50\n",
+      "684/684 [==============================] - 0s 449us/step - loss: 0.5350 - accuracy: 0.7149\n",
+      "Epoch 38/50\n",
+      "684/684 [==============================] - 0s 356us/step - loss: 0.5303 - accuracy: 0.7237\n",
+      "Epoch 39/50\n",
+      "684/684 [==============================] - 0s 348us/step - loss: 0.5451 - accuracy: 0.7193\n",
+      "Epoch 40/50\n",
+      "684/684 [==============================] - 0s 454us/step - loss: 0.5415 - accuracy: 0.7295\n",
+      "Epoch 41/50\n",
+      "684/684 [==============================] - 0s 362us/step - loss: 0.5329 - accuracy: 0.7149\n",
+      "Epoch 42/50\n",
+      "684/684 [==============================] - 0s 399us/step - loss: 0.5345 - accuracy: 0.7164\n",
+      "Epoch 43/50\n",
+      "684/684 [==============================] - 0s 429us/step - loss: 0.5244 - accuracy: 0.7251\n",
+      "Epoch 44/50\n",
+      "684/684 [==============================] - 0s 354us/step - loss: 0.5148 - accuracy: 0.7354\n",
+      "Epoch 45/50\n",
+      "684/684 [==============================] - 0s 348us/step - loss: 0.5352 - accuracy: 0.7383\n",
+      "Epoch 46/50\n",
+      "684/684 [==============================] - 0s 369us/step - loss: 0.5187 - accuracy: 0.7149\n",
+      "Epoch 47/50\n",
+      "684/684 [==============================] - 0s 398us/step - loss: 0.5325 - accuracy: 0.7105\n",
+      "Epoch 48/50\n",
+      "684/684 [==============================] - 0s 536us/step - loss: 0.5252 - accuracy: 0.7237\n",
+      "Epoch 49/50\n",
+      "684/684 [==============================] - 0s 536us/step - loss: 0.5210 - accuracy: 0.7251\n",
+      "Epoch 50/50\n",
+      "684/684 [==============================] - 0s 506us/step - loss: 0.5215 - accuracy: 0.7251\n",
+      "667/667 [==============================] - 0s 179us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.486675848935855, 0.830584704875946]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print ('shape of x-train is ', x_train.shape)\n",
-    "print ('shape of y-train is ', y_train.shape)\n",
-    "print ('shape of x-test is ', x_test.shape)\n",
-    "print ('shape of y-test is ', y_test.shape)\n",
-    "\n",
-    "x_train_short = [];\n",
-    "y_train_short = [];\n",
-    "x_test_short = [];\n",
-    "y_test_short = [];\n",
-    "for i in range(y_train.shape[0]):\n",
-    "  if (y_train[i] == 0 or y_train[i] == 1):\n",
-    "    x_train_short.append(x_train[i])\n",
-    "    y_train_short.append(y_train[i])\n",
-    "  else: \n",
-    "    pass\n",
-    "for i in range(y_test.shape[0]):\n",
-    "  if (y_test[i] == 0 or y_test[i] == 1):\n",
-    "    x_test_short.append(x_test[i])\n",
-    "    y_test_short.append(y_test[i])\n",
-    "  else: \n",
-    "    pass\n",
-    "\n",
-    "x_train = np.array(x_train_short)\n",
-    "y_train = np.array(y_train_short)\n",
-    "x_test = np.array(x_test_short)\n",
-    "y_test = np.array(y_test_short)\n",
-    "\n",
-    "print (x_train.shape)\n",
-    "print (y_train.shape)\n",
-    "print (x_test.shape)\n",
-    "print (y_test.shape)\n",
-    "\n",
-    "x_train = x_train.reshape(x_train.shape[0], 28, 28, 1)\n",
-    "x_test = x_test.reshape(x_test.shape[0], 28, 28, 1)\n",
+    "if False:\n",
+    "    x_train = x_train.reshape(x_train.shape[0], 28, 28, 1)\n",
+    "    x_test = x_test.reshape(x_test.shape[0], 28, 28, 1)\n",
+    "    x_train = x_train.astype('float32')\n",
+    "    x_test = x_test.astype('float32')\n",
+    "    x_train /= 255\n",
+    "    x_test /= 255\n",
+    "    print (x_train.shape)\n",
+    "    print (y_train.shape)\n",
+    "else:\n",
+    "    x_train = prepareData(x_train)\n",
+    "    print (x_train.shape)\n",
+    "    x_test = prepareData(x_test)\n",
+    "    print (x_test.shape)\n",
+    " \n",
     "input_shape = (28, 28, 1)\n",
-    "x_train = x_train.astype('float32')\n",
-    "x_test = x_test.astype('float32')\n",
-    "x_train /= 255\n",
-    "x_test /= 255\n",
-    " \n",
-    " \n",
+    "\n",
     " \n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Conv2D, Dropout, Flatten, MaxPooling2D\n",
@@ -182,11 +321,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.000000e+00 3.664563e-09]]\n",
+      "[[1.0000000e+00 5.1703863e-09]]\n",
+      "[[1.0000000e+00 9.9795905e-09]]\n",
+      "[[1.0000000e+00 1.0929164e-08]]\n",
+      "[[1.0000000e+00 7.0475887e-09]]\n",
+      "[[1.000000e+00 5.309439e-09]]\n",
+      "[[1.0000000e+00 2.6459226e-09]]\n",
+      "[[1.000000e+00 8.376869e-09]]\n",
+      "[[1.0000000e+00 3.3564482e-09]]\n",
+      "[[9.9999988e-01 1.5406559e-07]]\n",
+      "[[9.9999881e-01 1.1997122e-06]]\n",
+      "[[9.9999893e-01 1.0498783e-06]]\n",
+      "[[1.0000000e+00 1.2163028e-08]]\n",
+      "[[9.999945e-01 5.475654e-06]]\n",
+      "[[9.9999690e-01 3.0532183e-06]]\n",
+      "[[9.999974e-01 2.677612e-06]]\n",
+      "[[9.9999976e-01 2.0565510e-07]]\n",
+      "[[9.999999e-01 7.439355e-08]]\n",
+      "[[9.999976e-01 2.429585e-06]]\n",
+      "[[9.999956e-01 4.445698e-06]]\n",
+      "[[9.9999976e-01 2.3452907e-07]]\n",
+      "[[9.9999940e-01 5.7867567e-07]]\n",
+      "[[9.9999976e-01 2.0798961e-07]]\n",
+      "[[9.9999964e-01 4.0976462e-07]]\n",
+      "[[9.9999940e-01 6.2943457e-07]]\n",
+      "[[9.999994e-01 6.544229e-07]]\n",
+      "[[1.000000e+00 1.597659e-09]]\n",
+      "[[9.999993e-01 7.573980e-07]]\n",
+      "[[1.0000000e+00 3.3830842e-12]]\n",
+      "[[1.0000000e+00 1.6730736e-10]]\n",
+      "[[1.0000000e+00 4.1801402e-09]]\n",
+      "[[1.0000000e+00 4.0578336e-09]]\n",
+      "[[1.0000000e+00 3.7273797e-09]]\n",
+      "[[1.0000000e+00 3.7347236e-09]]\n",
+      "[[1.0000000e+00 3.5392718e-09]]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-74d77014c639>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_live\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0;31m#if prediction[0, 0] > prediction[0, 1]:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;31m#print(0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "model.predict(x_test)"
+    "cam = cv2.VideoCapture(0)\n",
+    "import time\n",
+    "while True:\n",
+    "    localFinalImagesArr = []\n",
+    "    ret, frame = cam.read()\n",
+    "    if frame is None:\n",
+    "        break\n",
+    "    output = ResizeConvert(frame)\n",
+    "    localFinalImagesArr.append(output)\n",
+    "    x_live = np.array(localFinalImagesArr)\n",
+    "    x_live = prepareData(x_live)\n",
+    "    prediction = model.predict(x_live)\n",
+    "    print (prediction)\n",
+    "    time.sleep(1)\n",
+    "    #if prediction[0, 0] > prediction[0, 1]:\n",
+    "        #print(0)\n",
+    "    #else:\n",
+    "        #print (1)"
    ]
   },
   {
